- Resprited Wicked Amethyst Item
- Resprited Soul shard
- Resprited Cattail

- Renamed Uncharged Stone -> Uncharged Shard
- Renamed Soulstone -> Soul shard
- Renamed Amethyst (mod one btw) -> Wicked Amethyst
- Renamed Keyblocks to Umbral Blocks

- Prospectors pick now breaks ICE blocks much faster
- Server sided most of the particles
- Golden accessories makes Piglin neutral now
- Accessories will be damaged when player was attacked
- Goblins can take weapons to hand
- Goblins can spawn with weapons in hand with chance
- Necklaces will change their size depending on armor

- Fixed Misspells in Sounds tooltips
- Fixed Misspell in Jewelry JEI
- Fixed 1 pixel Y offset in jei
- Fixed Plants LootTable
- Fixed Baby Goblins
- Fixed Bug - Goblins tried to attack creative player when was hurt
- Fixed Bug - When multiple items were in cooldown, the sound would be very loud
- Fixed Bug - Necklaces now bigger than player 2'nd layer
- Fixed Entities attributes

- Changed Stonecrusher recipe
- Changed opacity for Eternity appearing after Phantom ability
- Changed attributes maximum value (for vanilla armor atts) [May not work in some servers]
- Changed Aloe Bandage animations
- Changed Hitboxes for all modded entities (vanilla parity):
    - Goblin: 0.5f, 1.3f -> 0.6f, 1.25f
    - Mannequin: 1f, 2f -> 0.6f, 1.95f
    - Draugr: 1f, 2f -> 0.6f, 1.95f
- Changed Chance of receiving a charge when hitting an Enemy with Infernal Sword 5% -> 10%
- Changed Chance of stunning the target when hitting with Club 5% -> 7%
- Changed Corpsecleaver to SwordItem, so it will support sword enchantments
- Changed HoundItem (Bloodhound sword) to SwordItem, so it will support sword enchantments
- Changed Sounds of abilities to new ones (Credit to Calamity mod <3)

- Decreased Limestone spawn chance
- Decreased particles count (15 -> 4) when picking up Mannequin
- Decreased particles count (16 -> 3) after attacking Mannequin

- Deleted class KeyBlock now it's powered with Tags